# Esterv.Crypto.NFTWallet

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  main.cpp
.github/workflows/: build-android.yaml  build-test-install.yml  build-wasm.yaml  conf-build-test-install.yml
android/: AndroidManifest.xml
include/: CreateNFT.hpp
qml/: BoxMenu.qml  BoxNFT.qml  ConfDrawer.qml  LocalConf.qml  SendDialog.qml  TextAddress.qml  UpdateFrame.qml  window.qml
qml/empty/: UpdateFrame.qml
src/: CreateNFT.cpp
wasm/: index.html  nftMinter.js  nftminter.js  style.css
wasm/js/: initQTwasm.js  scripts.js
wasm/wasm/: index.html
